--- a/knowledge_graph/pennylane_to_qiskit_examples.ipynb
+++ b/knowledge_graph/pennylane_to_qiskit_examples.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "id": "28b2c064",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
     "\n",
     "theta = 0.3\n",
     "\n",
-    "Use a QuantumTape to *record* operations, not execute them.\n",
+    "# Use a QuantumTape to *record* operations, not execute them.\n",
     "tape = qml.tape.QuantumTape()\n",
     "with tape:\n",
     "    qml.RX(theta, wires=0)\n",
